# Simple-Editer-OpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindPath.hpp  README.md  RenderDemo.cpp  RenderDemo.h  char_unit.h  macro.h  main.cpp
cmake/: FindGLM.cmake
res/: test.txt
